--- a/index.html
+++ b/index.html
@@ -5,6 +5,31 @@
   <title>barbershop</title>
 </head>
 <body>
-  
+  <header class="page-header">
+    <nav class="navigation">
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <a class="navigattion-link" href="about.html">О нас</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigattion-link" href="catalog.html">Каталог</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigattion-link" href="faq.html">Частые вопросы</a>
+        </li>
+      </ul>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a class="navigattion-link" href="#">Поиск</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigattion-link" href="#">Корзина</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigattion-link" href="#">Вход</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
